Change Log for OpenXava project
===============================


- Fix: XSS protection does not include iframe.
- Fix: Error "i.contentWindow is null" on closing a dialog with HTML_TEXT stereotype.
- Fix: Frames for groups with blanks in their name do not open and close. 
- Fix: Section and group names with blanks produces some misbehavior.
- New removeBlanks() method in Strings utility class.
- Fix: A reference to parent cannot be changed in a composite structure.

OpenXava 5.2 (2015-1-26)
------------------------
- Moving columns in list with drag and drop.
- Removing a column from a list is done instantly and with a fade effect.
- The list for adding columns to a list is shown inside a dialog.
- The list for adding columns to a list no longer uses pagination, but a scrollbar.
- The list for adding columns to a list shows only until second level properties at first, and all properties on demand.
- The list for adding columns to a list is ordered by the localized column labels of the properties.
- The list for adding columns to a list no longer shows the internal properties names.
- Fade effect to show/hide the filter part of the list and the customization icons.
- Using JavaScript to show/hide the list customization icons, without an AJAX request.
- List customization icons are hidden automatically after executing any action.
- 20% performance improvement in automated module tests.
- HtmlUnit upgraded to 2.15.
- jQuery UI upgraded to 1.11.2.
- jQuery upgraded to 1.11.2.  
- Upgraded Commons Lang3 library to 3.3.2. 
- New move() method in XCollections utility class.
- The browser property in xava-junit.properties is no longer supported.
- New createWar ant task included by default in new projects.
- Frame spacing when several frames in a row adjusted. 
- Performance improvement for label resolution.
- Fix: After removing a column from a list the filter data is gone.
- Fix: Test code does not work after calling ModuleTestBase.logout().
 