@@ -1,6 +1,7 @@
 package org.openxava.test.actions;
 
 import org.openxava.actions.*;
+import org.openxava.test.model.*;
 
 /**
  * 
@@ -10,7 +11,9 @@ import org.openxava.actions.*;
 public class OnChangeDeliveryTypeAction extends OnChangePropertyBaseAction {
 
 	public void execute() throws Exception {
-		addMessage("type=" + getNewValue());		
+		addMessage("type=" + getNewValue());
+		Delivery delivery = (Delivery) getView().getEntity();
+		addMessage("type.description=" + delivery.getType().getDescription());
 	}
 
 }
